# Kali-Nova

./: README.md  api_contracts.md  architecture.md  database_schema.md  development_phase.md  engineering_scope_definition.md  environment_and_devops.md  information_architecture.md  monorepo_structure.md  mvp_tech_doc.md  prd.md  product_requirement.md  scoring_engine.md  system_architecture.md  systemdesign.md  testing_strategy.md  user_stories_and_acceptance_criteria.md
kalinova/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
kalinova/core/: suggestion_engine.py
kalinova/packaging/: control  kalinova.desktop  postinst  prerm
kalinova/src/kalinova/: __init__.py  __main__.py  main.py
kalinova/src/kalinova/core/: __init__.py  command_builder.py  database.py  exceptions.py  process_runner.py  tool_registry.py
kalinova/src/kalinova/gui/: __init__.py  dashboard.py  disclaimer_dialog.py  main_window.py  styles.py
kalinova/src/kalinova/gui/tools/: __init__.py  (+5 more)
kalinova/src/kalinova/handlers/: __init__.py  type_handler.py
kalinova/src/kalinova/ml/: __init__.py  feature_extractor.py  predictor.py
kalinova/src/kalinova/parsers/: __init__.py  base_parser.py  hydra_parser.py  john_parser.py  nikto_parser.py  nmap_parser.py
kalinova/src/kalinova/reporting/: __init__.py  report_generator.py
kalinova/src/kalinova/utils/: __init__.py  validators.py
kalinova/ui/: auth_page.py  console.py  dashboard_page.py  main_window.py  network_page.py  recon_page.py  reports_page.py  settings_page.py  sidebar.py  topbar.py  web_page.py  workspace.py
