[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kalinova"
version = "1.0.0"
description = "Intelligent GUI Security Suite for Kali Linux"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kalinova Team"}
]

dependencies = [
    "PyQt6>=6.5.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
kalinova = "kalinova.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 100
exclude = [".venv", "build", "dist"]
